fixed horizontal scroll

--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -30,7 +30,6 @@
     margin-left: 16px;
     font-size: 32px;
     line-height: 109%;
-    width: 100%;
     padding: 0 0 32px 0;
   }
 }
